--- a/TaskManager/index.html
+++ b/TaskManager/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2/dist/tailwind.min.css" rel="stylesheet" type="text/css" />
     <title>Quera Task Manager</title>
   </head>
-  <body dir="rtl">
+  <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
